[package]
name = "nomu"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "graphics", "rendering", "gui"]
description = "A game engine written in Rust"
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/eoghanriley/gneiss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.38"
wgpu = "0.14.2"
winit = "0.27.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
